Edit the page with Typora

--- a/sPHENIX.html
+++ b/sPHENIX.html
@@ -518,6 +518,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-mac'><h1><a name="sphenix" class="md-header-anchor"></a><span>sPHENIX</span></h1><p><span>Raindrops on roses, whiskers on kittens, calorimeters in the test beam, and Python on the desktop... these are a few of my favorite things.   </span></p><p><span>This is a test of creating a nice looking web page using Typora and gitpages.</span></p><p>&nbsp;</p></div>
+<div  id='write'  class = 'is-mac'><h1><a name="sphenix" class="md-header-anchor"></a><span>sPHENIX</span></h1><p><span>Raindrops on roses, whiskers on kittens, calorimeters in the test beam, and Python on the desktop... these are a few of my favorite things.   </span></p><p><span>This is a test of creating a nice looking web page using Typora and gitpages.</span></p><h2><a name="first-section" class="md-header-anchor"></a><span>First section</span></h2><p><span>There, I added a section.  I can put in lists, too!</span></p><ol><li><span>The very first thing.</span></li><li><span>The second thing.</span></li></ol><h3><a name="a-subsection-with-a-picture" class="md-header-anchor"></a><span>A subsection with a picture</span></h3><p><span>What about adding pictures?  How hard could that be, right?  Here is the temperature profile of the EMCAL the other day.</span></p><p><img src="/Users/haggerty/Desktop/emcsipm_100.png" referrerpolicy="no-referrer" alt="emcsipm_100"></p><p>&nbsp;</p></div>
 </body>
 </html>
